--- a/8_GUI/scss/_variables.scss
+++ b/8_GUI/scss/_variables.scss
@@ -42,7 +42,7 @@ $font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI"
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
 $headings-font-weight: 400 !default;
-
+///////////////////
 // Shadows
 $box-shadow-sm: 0 0.125rem 0.25rem 0 rgba($gray-900, .2) !default;
 $box-shadow: 0 0.15rem 1.75rem 0 rgba($gray-900, .15) !default;
