--- a/8_GUI/scss/_login.scss
+++ b/8_GUI/scss/_login.scss
@@ -1,5 +1,6 @@
 // Pulling these images from Unsplash
-// Toshi the dog from https://unsplash.com/@charlesdeluvio - what a funny dog...
+// Toshi the dog from https://unsplash.com/@charlesdeluvio - 
+////////////////////
 
 .bg-login-image {
   background: url($login-image);
