--- a/8_GUI/scss/_error.scss
+++ b/8_GUI/scss/_error.scss
@@ -2,6 +2,10 @@
 // Tutorial and CSS from CSS Tricks
 // https://css-tricks.com/glitch-effect-text-images-svg/
 
+
+
+////////////////
+
 .error {
   color: $gray-800;
   font-size: 7rem;
